--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,11 +71,13 @@
     <string name="requestBook_cost_display">The total cost is <u>$(cost)</u></string>
     <string name="requestBook_message">Type message</string>
     <string name="requestBook_send_button">Send</string>
-    <string name="textview">TextView</string>
+    <string name="findBook_postalCode">Postal Code</string>
     <string name="updateBook0_title">MY BOOKS</string>
     <string name="homepage_addUpdateBook">Add/Update a Book</string>
     <string name="homepage_findBook">Find a book</string>
     <string name="homepage_readingTracker">Reading Tracker</string>
     <string name="homepage_text">Hi User,</string>
     <string name="homepage_text2">What would you like to do today?</string>
+    <string name="findBook_BTN_Search">Search</string>
+    <string name="findBook_hint_postal_code">Enter Postal Code</string>
 </resources>
