--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="btnUpdate">Update</string>
     <string name="giveAway">Give Away</string>
     <string name="totalCost">$ Total Cost</string>
+    <string name="rentPrice">$ Rent Price (If)</string>
     <string name="rentHint">$ Cost per week</string>
     <string-array name="signUp2_countries">
         <item>Canada</item>
