user validation method is done public Cursor GetBookReaderByPassAndEmail(String password,String email)
the  reading tracker interface is created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="homepage_text2">What would you like to do today?</string>
     <string name="findBook_BTN_Search">Search</string>
     <string name="findBook_hint_postal_code">Enter Postal Code</string>
+    <string name="readingTrickerTitle">Reading Tracker</string>
 </resources>
