all adding book class is updated, please work on update in the same way

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="totalCost">$ Total Cost</string>
     <string name="rentPrice">$ Rent Price (If)</string>
     <string name="rentHint">$ Cost per week</string>
+    <string name="linkHint">Insert a link </string>
     <string-array name="signUp2_countries">
         <item>Canada</item>
         <item>United States</item>
