Add a book is updated a spinner is being used

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="totalCost">$ Total Cost</string>
     <string name="rentPrice">$ Rent Price (If)</string>
     <string name="rentHint">$ Cost per week</string>
-    <string name="linkHint">Insert a link </string>
+    <string name="link_Hint">Insert a link </string>
     <string-array name="signUp2_countries">
         <item>Canada</item>
         <item>United States</item>
@@ -83,4 +83,11 @@
     <string name="findBook_BTN_Search">Search</string>
     <string name="findBook_hint_postal_code">Enter Postal Code</string>
     <string name="readingTrickerTitle">Reading Tracker</string>
+    <string-array name="bookOptions">
+        <item>Please select an option</item>
+        <item>Rent</item>
+        <item>Share</item>
+        <item>Give away</item>
+        <item>Not avalaible</item>
+    </string-array>
 </resources>
