update some features to math with the change of DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
         <item>Give away</item>
         <item>Not avalaible</item>
     </string-array>
+    <string name="unavailable">Unavailable</string>
 </resources>
