update some features to math with the change of DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,6 @@
         <item>Not avalaible</item>
     </string-array>
     <string name="unavailable">Unavailable</string>
+    <string name="reply_Request">Reply Request</string>
+    <string name="listRequestedBook">List Requested Books</string>
 </resources>
